# iptvPlayer

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ffmpegJNI.vcxproj  iptvplayer.c  libffmpegJNI.sln  libffmpegJNI.vcxproj  libffmpegJNI.vcxproj.filters
app/src/main/java/com/example/iptvplayer/: Constants.kt  MainActivity.kt  MyApp.kt
app/src/main/java/com/example/iptvplayer/data/: ChannelsRepository.kt  EpgRepository.kt  IptvChannel.kt  PlaylistRepository.kt
app/src/main/java/com/example/iptvplayer/di/: ApplicationComponent.kt  RepositoriesModule.kt  RetrofitModule.kt
app/src/main/java/com/example/iptvplayer/presenter/channelsList/: Channel.kt  ChannelsList.kt
app/src/main/java/com/example/iptvplayer/presenter/enterPlaylistURL/: EnterPlaylistURL.kt  LottieIptvAnimation.kt  PlaylistURLViewModel.kt
app/src/main/java/com/example/iptvplayer/presenter/watchChannel/: WatchChannel.kt
app/src/main/java/com/example/iptvplayer/retrofit/: IptvService.kt
app/src/main/java/com/example/iptvplayer/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/iptvplayer/useCases/: GetChannelEpgUseCase.kt  ReadPlaylistContentByURLUseCase.kt
app/src/main/jniLibs/: Makefile.mk
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
